# onnx-mlir

src/Accelerators/: Accelerator.hpp
src/Accelerators/MQ/: CMakeLists.txt  MQAccelerator.cpp  MQAccelerator.hpp
src/Accelerators/MQ/Compiler/: CMakeLists.txt  MQCompilerOptions.cpp  MQCompilerOptions.hpp  MQCompilerUtils.cpp  MQCompilerUtils.hpp
src/Accelerators/MQ/Conversion/: CMakeLists.txt
src/Accelerators/MQ/Conversion/ONNXToMQHigh/: CMakeLists.txt  ONNXToMQHigh.cpp  ONNXToMQHigh.hpp  ONNXToMQHigh.td
src/Accelerators/MQ/Dialect/: CMakeLists.txt
src/Accelerators/MQ/Dialect/MQHigh/: CMakeLists.txt  MQHigh.td  MQHighOps.cpp  MQHighOps.hpp
src/Accelerators/MQ/Dialect/MQHigh/MQHighOps/: OpHelper.hpp
src/Accelerators/MQ/Dialect/MQHigh/MQHighOps/MatMul/: MatMul.cpp
src/Accelerators/MQ/Dialect/MQHigh/MQHighOps/Pack/: Pack.cpp
src/Accelerators/MQ/Dialect/MQHigh/MQHighOps/Unpack/: Unpack.cpp
src/Accelerators/MQ/Pass/: MQPasses.hpp
test/mlir/accelerators/mq/: dummy.mlir  run_test.sh  test_infershape.mlir  test_onnx2mqhigh_matmul.mlir
utils/: install-onnx-mlir.sh
